-
Bug
-
Resolution: Done
-
P2: Important
-
6.0.0
-
f0d1a50333f3945369077a48ba7f2bdf228276cc (qt/qtbase/dev)
vkDebug: Validation: 0: Validation Error: [ SYNC-HAZARD-WRITE_AFTER_WRITE ] Object 0: handle = 0x100c000000100c, type = VK_OBJECT_TYPE_RENDER_PASS; | MessageID = 0xfdf9f5e1 | vkCmdBeginRenderPass: Hazard WRITE_AFTER_WRITE in subpass 0 for attachment 1 image layout transition (old_layout: VK_IMAGE_LAYOUT_UNDEFINED, new_layout: VK_IMAGE_LAYOUT_DEPTH_STENCIL_ATTACHMENT_OPTIMAL). Access info (usage: SYNC_IMAGE_LAYOUT_TRANSITION, prior_usage: SYNC_LATE_FRAGMENT_TESTS_DEPTH_STENCIL_ATTACHMENT_WRITE, write_barriers: 0, command: vkCmdEndRenderPass, seq_no: 6, reset_no: 123).
(SDK 1.2.154, sync validation enabled with vkconfig)